# pasta_curves

./: .gitignore  404.html  CHANGELOG.md  COPYING  Cargo.toml  LICENSE-MIT  README.md  design.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: book.yml  ci.yml
benches/: hashtocurve.rs  point.rs
book/src/design/implementation/: fields.md
design/: implementation.html
design/implementation/: fields.html
src/: arithmetic.rs  curves.rs  fields.rs  hashtocurve.rs  lib.rs  pallas.rs  serde_impl.rs  vesta.rs
src/arithmetic/: curves.rs  fields.rs
src/fields/: fp.rs  fq.rs
user/: simple-example.html
