[package]
name = "pasta_curves"
description = "Implementation of the Pallas and Vesta (Pasta) curve cycle"
version = "0.0.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
license-file = "LICENSE-BOSL"
repository = "https://github.com/zcash/pasta_curves"
documentation = "https://docs.rs/pasta_curves"
readme = "README.md"

# We are not publishing this yet.
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "0.3"

[[bench]]
name = "hashtocurve"
harness = false

[[bench]]
name = "fp"
harness = false

[[bench]]
name = "fq"
harness = false

[dependencies]
subtle = "2.3"
ff = "0.9"
group = "0.9"
rand = "0.8"
blake2b_simd = "0.5"
lazy_static = "1.4.0"
static_assertions = "1.1.0"

# Temporary workaround for https://github.com/myrrlyn/funty/issues/3
funty = "=1.1.0"
