[package]
name = "pasta_curves"
description = "Implementation of the Pallas and Vesta (Pasta) curve cycle"
version = "0.2.1"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/pasta_curves"
documentation = "https://docs.rs/pasta_curves"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "0.3"

[[bench]]
name = "hashtocurve"
harness = false
required-features = ["std"]

[[bench]]
name = "fp"
harness = false

[[bench]]
name = "fq"
harness = false

[[bench]]
name = "point"
harness = false
required-features = ["std"]

[dependencies]
blake2b_simd = { version = "0.5", default-features = false }
ff = { version = "0.11", default-features = false }
group = { version = "0.11", default-features = false }
rand = { version = "0.8", default-features = false }
static_assertions = "1.1.0"
subtle = { version = "2.3", default-features = false }

# std dependencies
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["bits", "std"]
bits = ["ff/bits"]
std = ["group/alloc", "lazy_static", "rand/getrandom"]
